# learningmoon

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly.yml  main.yml
assets/: main.css  tailwind.css
src/: main.rs
src/ui/components/: logo.rs  mod.rs  register.rs
src/ui/views/auth/: login.rs  register.rs
tests/: auth.rs
