[package]
name = "learningmoon"
version = "0.1.0"
authors = ["bananabit <bananabit@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }

# Web server
tokio = { version = "1.47.1", optional = true }
axum = {version = "0.8.4", optional = true}
tower-http = {version = "0.6.6",features = ["fs"], optional = true}

[features]
default = ["web"]
web = ["dioxus/web"]
api = ["dioxus/server", "tokio", "axum", "tower-http"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
