[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web", 
    "packages/desktop", 
    "packages/mobile", 
    "packages/api", 
    "packages/ba-server", 
    "packages/cl-logic"
]

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.0" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
ba-server = { path = "packages/ba-server"}
